# python-credit_risk_bayes

./: README.md  get_data.sh  logistic_normal.stan  logistic_uniform.stan  pyproject.toml  work pymc3.ipynb  work stan.ipynb  work.ipynb
